# screencap

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  SPEC.md  build.rs  config.example.toml
.factory/: init.sh  services.yaml
.factory/skills/core-worker/: SKILL.md
.factory/skills/native-macos-worker/: SKILL.md
.factory/skills/web-worker/: SKILL.md
.github/workflows/: expect.yml
.pi/context/: us-001-foundation-20260410T000000Z.md  us-002-storage-20260410T190644Z.md  us-003-screenshot-20260410T192929Z.md  us-004-window-20260410T201731Z.md
.pi/state/: pi-ralph.json
.ralph/: .last-branch  prd.json  progress.txt  ralph.sh
.ralph/scripts/: PROMPT.md  ralph.sh
menubar/: Package.swift
menubar/Sources/ScreencapMenu/: AppDelegate.swift  ScreencapDaemonController.swift
menubar/Tests/ScreencapMenuTests/: ScreencapMenuTests.swift
scripts/: seed_search_data.py
src/: config.rs  daemon.rs  lib.rs  main.rs  tests.rs
src/ai/: anthropic.rs  google.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs  provider.rs  test_support.rs
src/api/: mod.rs  routes.rs  server.rs  static_assets.rs  ui.rs
src/capture/: events.rs  mod.rs  screenshot.rs  window.rs
src/export/: markdown.rs  mod.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/pipeline/: extraction.rs  json.rs  mod.rs  prompts.rs  scheduler.rs  synthesis.rs
src/storage/: db.rs  metrics.rs  mod.rs  models.rs  prune.rs  screenshots.rs
swift/Menubar/: Package.swift  ScreencapApp.swift
swift/Menubar/.build/: debug.yaml
swift/Sources/: Events.swift  ScreenCapture.swift  WindowInfo.swift  bridge.h
tests/: api_server.rs  daemon_cli.rs  e2e_capture_api.rs  e2e_daemon.rs  e2e_daemon_ui_api.rs  e2e_pipeline.rs  export.rs  mcp_server.rs  prune.rs  us033_browser_qa_report.json
tests/support/: mod.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
web/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
web/.svelte-kit/types/: route_meta_data.json
web/src/: App.svelte  app.css  app.html  global.d.ts
web/src/lib/: api.ts
web/src/lib/components/: CaptureCard.svelte  CaptureDetailsModal.svelte  DailySummarySection.svelte  HourlyDigestCard.svelte  Layout.svelte  RollingContextCard.svelte  RoutePlaceholder.svelte  (+1 more)
web/src/pages/: Insights.svelte  Timeline.svelte
web/src/routes/: +layout.svelte  +page.svelte  Insights.svelte  Search.svelte  Stats.svelte  Timeline.svelte
(+374 files in other folders)
