[package]
name = "screencap"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Lightweight screen memory for macOS"
license = "MIT"
authors = ["Screencap Contributors"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for AI providers
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }

# Async utilities
futures = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Home directory resolution
dirs = "5"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing utilities
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "screencap"
path = "src/main.rs"

[lib]
name = "screencap"
path = "src/lib.rs"
